Updated the git ignore. Added the player general outlines

--- a/src/Components/Player/PlayerContainer.scss
+++ b/src/Components/Player/PlayerContainer.scss
@@ -1,5 +1,5 @@
 @import "../../AppVariables.scss";
-.player {
+.player-container {
   // To ensure that the player container spans the whole page
   border-radius: 2rem;
   display: flex;
