--- a/src/Mixins.scss
+++ b/src/Mixins.scss
@@ -5,6 +5,9 @@
   transform: translate(-50%, -50%);
 }
 
+@mixin flexCenter {
+}
+
 // **************************** Media Queries related mixins **************************** //
 
 /**
